--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,6 @@
     "name": "tde/tde-emoji-text",
     "description": "This plugin bypasses the error X",
     "type": "craft-plugin",
-    "version": "1.0.0",
     "keywords": [
         "craft",
         "cms",
@@ -26,7 +25,7 @@
     },
     "autoload": {
         "psr-4": {
-          "tde\\tdeemojitext\\": "src/"
+          "TDE\\EmojiText\\": "src/"
         }
     },
     "extra": {
