--- a/composer.json
+++ b/composer.json
@@ -21,11 +21,12 @@
         }
     ],
     "require": {
-        "craftcms/cms": "^3.0.0-RC1"
+		"php": "^8.0",
+        "craftcms/cms": "^4.0.0"
     },
     "autoload": {
         "psr-4": {
-          "TDE\\EmojiText\\": "src/"
+          "tde\\craft\\emojitext\\": "src/"
         }
     },
     "extra": {
@@ -34,6 +35,12 @@
         "hasCpSettings": false,
         "hasCpSection": false,
         "changelogUrl": "https://raw.githubusercontent.com/TdeNL/tde-emoji-text/master/CHANGELOG.md",
-        "class": "TDE\\EmojiText\\TdeEmojiText"
+        "class": "tde\\craft\\emojitext\\TdeEmojiText"
+    },
+    "config": {
+        "allow-plugins": {
+            "yiisoft/yii2-composer": true,
+            "craftcms/plugin-installer": true
+        }
     }
 }
